Add argument parsing and steam api requests

--- a/README
+++ b/README
@@ -3,3 +3,7 @@ detects steam achievements that might have been unlocked by cheating (e.g. with 
 
 How to obtain the Steam Web API Key:
 https://steamcommunity.com/dev/apikey
+
+#TODO
+- add option to specify url to user's profile instead of 64-bit steamID | If user is using a custom profile url it needs to be extracted from the source of the page because it is not present in the uri anymore.
+
